fixed some srcollbar problem

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     </style>
 
 </head>
-<body class="w-100 overflow-hidden" style="height: 100vh;">
+<body class="w-100" style="height: 100vh;">
 
     <div class="d-flex" style="height: 100vh;">
 
@@ -35,7 +35,7 @@
         </div>
 
         
-        <div id="right" class='alert-primary' style="width: 275px;overflow-x: hidden;overflow-y: auto;border-left:1px solid #cbcbcb;height: 100vh;">
+        <div id="right" class='alert-primary sticky-top' style="width: 275px;overflow-x: hidden;overflow-y: auto;border-left:1px solid #cbcbcb;height: 100vh;">
 
             <div id="banner" class="w-100 py-2 ps-4" style="border-bottom: 1px solid #cbcbcb;">
                 <nav class="d-flex mb-2">
