--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </div>
 
         
-        <div id="right" class='alert-primary sticky-top' style="width: 275px;overflow-x: hidden;overflow-y: auto;border-left:1px solid #cbcbcb;height: 100vh;">
+        <div id="right" class='alert-primary sticky-top' style="width: 275px;overflow-x: hidden;overflow-y: auto;border-left:1px solid #cbcbcb;height: 100vh;z-index: 4;">
 
             <div id="banner" class="w-100 py-2 ps-4" style="border-bottom: 1px solid #cbcbcb;">
                 <nav class="d-flex mb-2">
