fix overflow bug

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <img id='cardviwer'class='w-100' alt src="Cards/1010001/Card_1010001_2_b.png">
             </div>
         </div>
-        <div class="col-lg-3 bg-light d-flex flex-column p-0 h-100">
+        <div class="col-lg-3 bg-light d-flex flex-column p-0">
             <div class='d-flex justify-content-end align-items-center p-2 border-bottom border-secondary'>
                 <button id='closedisplaycard' type="button" class="btn btn-outline-secondary btn-circle btn-circle-xl m-1">
                     <i class="fas fa-times"></i>
