add Twitter Open Graph tags

--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
     <title>CUE! Cards Viewer</title>
     <link rel="icon" href="image/favicon.jpg">
     
+    <!-- css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
+
+    <!-- tw -->
+    <meta name="twitter:card" content="summary" />
+    <meta property="og:url" content="https://cpk0521.github.io/CUE-Cards-Viewer/" />
+    <meta property="og:title" content="CUE! Cards Viewer" />
+    <meta property="og:description" content="CUE! Cards Viewer" />
+    <meta property="og:image" content="https://cpk0521.github.io/CUE-Cards-Viewer/image/TitleBg.png" />
 
     <style>
         * {margin:0; padding: 0};
