--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
     <meta charset="utf-8" />
     <title>CUE! Cards Viewer</title>
     <link rel="icon" href="image/favicon.jpg">
+    <meta name="description" content="Cue! Cards Viewer">
+
     
     <!-- css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -10,10 +12,10 @@
     <link rel="stylesheet" href="css/style.css">
 
     <!-- tw -->
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta property="og:url" content="https://cpk0521.github.io/CUE-Cards-Viewer/" />
-    <meta property="og:title" content="CUE! Cards Viewer" />
-    <meta property="og:description" content="CUE! Cards Viewer" />
+    <meta property="og:title" content="Cue! Cards Viewer" />
+    <meta property="og:description" content="Cue! Cards Viewer" />
     <meta property="og:image" content="https://cpk0521.github.io/CUE-Cards-Viewer/image/TitleBg.png" />
 
     <style>
