--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 <head>
     <meta charset="utf-8" />
-    <title>CUE! Cards Viewer</title>
+    <title>Cards Viewer | Cue! see you everyday</title>
     <link rel="icon" href="image/favicon.jpg">
-    <meta name="description" content="Cue! Cards Viewer">
+    <meta name="description" content="Cue! Cards Viewer display all card images and all gacha animations">
 
     <!-- css -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
@@ -17,13 +17,13 @@
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:url" content="https://cpk0521.github.io/CUE-Cards-Viewer/" />
     <meta name="twitter:title" content="Cards Viewer | Cue! see you everyday" />
-    <meta name="twitter:description" content="Cue! Cards Viewer" />
+    <meta name="twitter:description" content="Cue! Cards Viewer display all card images and all gacha animations" />
     <meta name="twitter:image" content="https://cpk0521.github.io/CUE-Cards-Viewer/image/TitleBg.png" />
 
     <!-- facebook -->
     <meta property="og:title" content="Cards Viewer | Cue! see you everyday">
     <meta property="og:site_name" content="Cards Viewer | Cue! see you everyday">
-    <meta property="og:description" content="Cue! Cards Viewer">
+    <meta property="og:description" content="Cue! Cards Viewer display all card images and all gacha animations">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://cpk0521.github.io/CUE-Cards-Viewer/">
     <meta property="og:image" content="https://cpk0521.github.io/CUE-Cards-Viewer/image/TitleBg.png" />
